# prototype_lumi

./: .gitignore  Readme.md  final_patient_report.html  pyproject.toml  report_test.html  requirement.txt
data/: my_test_variants.vcf
luminagen_ai/: llm.py  main.py
luminagen_ai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
luminagen_ai/analysis/: variant_interpreter.py
luminagen_ai/data_processing/: wgs_handler.py
luminagen_ai/reporting/: report_generator.py
notebooks/: 01_data_exploration.ipynb
output/: patient_report.html
report/: final_patient_report.html  report_test02.html
